Fixed responsive design issues with overflowing tables

--- a/orgapy/static/orgapy/css/orgapy.css
+++ b/orgapy/static/orgapy/css/orgapy.css
@@ -274,6 +274,10 @@ hr {
     color: #999;
 }
 
+.note_content {
+    overflow-x: auto;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
